# Board-Game-AI

./: .gitignore  README.md  pyproject.toml
src/board_game/: __init__.py  board_game.py  waiting_room.py
src/board_game/players/: ai_player.py  human_player.py  player.py
src/photosynthesis/: __init__.py
src/photosynthesis/actions/: _action.py  buy_tree.py  grow_tree.py  harvest_tree.py  initial_placement.py  pass_turn.py  plant_seed.py
src/photosynthesis/game/: __init__.py  game_state.py  photosynthesis_game.py
src/photosynthesis/game_board/: __init__.py  condensed_board.py  game_board.py
src/photosynthesis/game_board/Inventory/: inventory.py
src/photosynthesis/game_board/store/: store.py
src/photosynthesis/players/: __init__.py  human_player.py
src/photosynthesis/players/ai/: __init__.py  random_player.py
src/photosynthesis/players/ai/deep_q_learning/: README.md  __init__.py  model.py  q_model.py  ql_player.py  state_tensor.py
src/photosynthesis/players/ai/linear_programming/: lp_player.py
src/photosynthesis/players/ai/mcts_policy_value/: mcts_player.py  model.py
src/photosynthesis/players/ai/reinforcement_learning/: model.py  rl_player.py
