[project]
name = "board-game-ai"
version = "0.1.0"
description = "Various AIs to play various Board Games"
authors = [
    {name = "n.smith.byu",email = "smithn14@byu.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch-geometric (>=2.7.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
